Adding CloudFormation linting (#40)
* Adding cfn-lint

* Saving inn-progress work

* Cleaner lint script

* Adding a policy violation as a test

* Adding required condition back

---------

Co-authored-by: EC2 Default User <ec2-user@ip-172-31-39-237.us-east-2.compute.internal>

--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "author": "peckn@amazon.com",
   "scripts": {
-    "lint": "node lint"
+    "lint": "./lint.sh"
   },
   "type": "module",
   "dependencies": {
