Fix subnet description in ecs-mount-efs-storage.yml

--- a/pattern/cloudformation-ecs-durable-task-storage-with-efs/files/ecs-mount-efs-storage.yml
+++ b/pattern/cloudformation-ecs-durable-task-storage-with-efs/files/ecs-mount-efs-storage.yml
@@ -13,7 +13,7 @@ Parameters:
                  EFS access
   SubnetTwo:
     Type: AWS::EC2::Subnet::Id
-    Description: The first subnet across which to distribute the application and
+    Description: The second subnet across which to distribute the application and
                  EFS access
 
 Resources:
