--- a/pattern/ecs-service-extensions-custom-extension/files/package.json
+++ b/pattern/ecs-service-extensions-custom-extension/files/package.json
@@ -16,18 +16,13 @@
   "license": "Apache-2.0",
   "devDependencies": {
     "@types/node": "^8.10.38",
-    "aws-cdk": "*",
+    "aws-cdk": "2.102.0",
     "typescript": "~4.6.0",
     "ts-node": "^10.9.1"
   },
   "dependencies": {
-    "aws-cdk-lib": "2.19.0",
+    "aws-cdk-lib": "2.102.0",
     "constructs": "^10.0.0",
-    "@aws-cdk-containers/ecs-service-extensions": "^2.0.0"
-  },
-  "overrides": {
-    "@aws-cdk-containers/ecs-service-extensions": {
-      "aws-cdk-lib": "2.19.0"
-    }
+    "@aws-cdk-containers/ecs-service-extensions": "2.0.1-alpha.183"
   }
 }
