--- a/pattern/elastic-file-system-ecs-cdk/files/package.json
+++ b/pattern/elastic-file-system-ecs-cdk/files/package.json
@@ -16,11 +16,11 @@
   "license": "Apache-2.0",
   "devDependencies": {
     "@types/node": "^8.10.38",
-    "aws-cdk": "*",
+    "aws-cdk": "2.102.0",
     "typescript": "~4.6.0"
   },
   "dependencies": {
-    "aws-cdk-lib": "^2.0.0",
+    "aws-cdk-lib": "2.102.0",
     "constructs": "^10.0.0"
   }
 }
