--- a/pattern/api-gateway-fargate-cloudformation/files/parent.yml
+++ b/pattern/api-gateway-fargate-cloudformation/files/parent.yml
@@ -42,3 +42,4 @@ Resources:
         VpcId: !GetAtt VpcStack.Outputs.VpcId
         PublicSubnetIds: !GetAtt VpcStack.Outputs.PublicSubnetIds
         ServiceSecurityGroup: !GetAtt ServiceStack.Outputs.ServiceSecurityGroup
+        ServiceDiscoveryServiceArn: !GetAtt ServiceStack.Outputs.ServiceDiscoveryServiceArn
