Filling out content for API Gateway pattern

--- a/pattern/api-gateway-fargate-cloudformation/files/api-gateway.yml
+++ b/pattern/api-gateway-fargate-cloudformation/files/api-gateway.yml
@@ -95,3 +95,8 @@ Resources:
       GroupId: !Ref ServiceSecurityGroup
       IpProtocol: -1
       SourceSecurityGroupId: !Ref ApiGatewaySecurityGroup
+
+Outputs:
+  ApiGatewayUri:
+    Description: The URI at which you can send traffic to your Fargate service
+    Value: !GetAtt ApiGateway.ApiEndpoint
