--- a/pattern/public-facing-api-ecs-fargate-cloudformation/files/service.yml
+++ b/pattern/public-facing-api-ecs-fargate-cloudformation/files/service.yml
@@ -88,7 +88,7 @@ Resources:
       LaunchType: FARGATE
       NetworkConfiguration:
         AwsvpcConfiguration:
-          AssignPublicIp: ENABLED
+          AssignPublicIp: DISABLED
           SecurityGroups:
             - !Ref ServiceSecurityGroup
           Subnets: !Ref PrivateSubnetIds
