--- a/pattern/ecr-image-size-and-count-usage-metrics/files/Dockerfile
+++ b/pattern/ecr-image-size-and-count-usage-metrics/files/Dockerfile
@@ -1,15 +1,16 @@
 # Build stage
-FROM public.ecr.aws/lambda/python:3.10
+FROM public.ecr.aws/lambda/python:3.11
 WORKDIR ${LAMBDA_TASK_ROOT}
 
 # Add Poetry to the image
-RUN curl -sSL https://install.python-poetry.org | POETRY_HOME=/tmp python3 -
+RUN set -o pipefail && curl -sSL https://install.python-poetry.org | POETRY_HOME=/tmp python3 -
 
 # Add the code
-COPY ecr-metrics ${LAMBDA_TASK_ROOT}
+COPY pyproject.toml poetry.lock README.md ${LAMBDA_TASK_ROOT}/
+COPY src/ ${LAMBDA_TASK_ROOT}/src
 
 # Install the required packages
 RUN /tmp/bin/poetry config virtualenvs.create false \
-    && /tmp/bin/poetry install --no-dev --no-interaction --no-ansi
+    && /tmp/bin/poetry install --only main --no-interaction --no-ansi
 
 CMD [ "src/ecr_metrics/main.handler" ]
