Adding Container Health Check
In order to replace unhealthy tasks, Task Definition needs to have the Container Health Check configured for Service Discovery service.

--- a/pattern/api-gateway-fargate-cloudformation/files/service.yml
+++ b/pattern/api-gateway-fargate-cloudformation/files/service.yml
@@ -67,6 +67,13 @@ Resources:
           PortMappings:
             - ContainerPort: !Ref ContainerPort
               HostPort: !Ref ContainerPort
+          HealthCheck:
+            Command:
+              - "CMD-SHELL"
+              - "curl -f http://localhost/ || exit 1"
+            Interval: 5
+            Retries: 2
+            Timeout: 3
           LogConfiguration:
             LogDriver: 'awslogs'
             Options:
