Ensuring that the ref arch works and adding a diagram

--- a/pattern/nginx-reverse-proxy-sidecar-ecs-fargate-task/files/service.yml
+++ b/pattern/nginx-reverse-proxy-sidecar-ecs-fargate-task/files/service.yml
@@ -105,7 +105,7 @@ Resources:
       DesiredCount: !Ref DesiredCount
       TaskDefinition: !Ref TaskDefinition
       LoadBalancers:
-        - ContainerName: !Ref ServiceName
+        - ContainerName: nginx
           ContainerPort: !Ref ContainerPort
           TargetGroupArn: !Ref ServiceTargetGroup
 
