--- a/pattern/nginx-reverse-proxy-sidecar-ecs-fargate-task/files/nginx/nginx.conf
+++ b/pattern/nginx-reverse-proxy-sidecar-ecs-fargate-task/files/nginx/nginx.conf
@@ -1,3 +1,7 @@
+events {
+  worker_connections 1024;
+}
+
 http {
   # NGINX will handle gzip compression of responses from the app server
   gzip on;
