--- a/pattern/cloudformation-ecs-durable-task-storage-with-efs/files/ecs-mount-efs-storage.yml
+++ b/pattern/cloudformation-ecs-durable-task-storage-with-efs/files/ecs-mount-efs-storage.yml
@@ -149,6 +149,8 @@ Resources:
           LogConfiguration:
             LogDriver: awslogs
             Options:
+              mode: non-blocking
+              max-buffer-size: 25m
               awslogs-group: !Ref EfsTaskLogGroup
               awslogs-region: !Ref AWS::Region
               awslogs-stream-prefix: efs-task
