--- a/pattern/public-facing-web-ecs-fargate-cloudformation/files/service.yml
+++ b/pattern/public-facing-web-ecs-fargate-cloudformation/files/service.yml
@@ -67,6 +67,8 @@ Resources:
           LogConfiguration:
             LogDriver: 'awslogs'
             Options:
+              mode: non-blocking
+              max-buffer-size: 25m
               awslogs-group: !Ref LogGroup
               awslogs-region: !Ref AWS::Region
               awslogs-stream-prefix: !Ref ServiceName
