--- a/pattern/service-discovery-fargate-microservice-cloud-map/files/name.yml
+++ b/pattern/service-discovery-fargate-microservice-cloud-map/files/name.yml
@@ -68,6 +68,8 @@ Resources:
           LogConfiguration:
             LogDriver: 'awslogs'
             Options:
+              mode: non-blocking
+              max-buffer-size: 25m
               awslogs-group: !Ref LogGroup
               awslogs-region: !Ref AWS::Region
               awslogs-stream-prefix: !Ref ServiceName
