--- a/pattern/sam-fargate/files/template.yml
+++ b/pattern/sam-fargate/files/template.yml
@@ -116,11 +116,11 @@ Resources:
           Principal:
             Service: [ecs-tasks.amazonaws.com]
           Action: ['sts:AssumeRole']
-          # Condition:
-          #   ArnLike:
-          #     aws:SourceArn: !Sub arn:aws:ecs:${AWS::Region}:${AWS::AccountId}:*
-          #   StringEquals:
-          #     aws:SourceAccount: !Ref AWS::AccountId
+          Condition:
+            ArnLike:
+              aws:SourceArn: !Sub arn:aws:ecs:${AWS::Region}:${AWS::AccountId}:*
+            StringEquals:
+              aws:SourceAccount: !Ref AWS::AccountId
       Path: /
 
 Outputs:
