Working end to end

--- a/pattern/ecs-fargate-container-image-signing-and-verification/files/parent-step-01.yml
+++ b/pattern/ecs-fargate-container-image-signing-and-verification/files/parent-step-01.yml
@@ -1,7 +1,7 @@
 AWSTemplateFormatVersion: "2010-09-09"
 Transform: AWS::Serverless-2016-10-31
-Description: Parent stack that deploys a serverless AWS Fargate web service.
-             Containers for the application will be verified after launch using AWS Signer
+Description: Parent stack that deploys a sample workflow for signing and verifying
+             the signatures on container images at runtime.
 
 Resources:
 
@@ -12,9 +12,12 @@ Resources:
       Location: registry.yml
 
 Outputs:
-  RepositoryUri:
+  SignedRepositoryUri:
     Description: The URI to use for pushing container images to the private registry
-    Value: !GetAtt RegistryStack.Outputs.RepositoryUri
+    Value: !GetAtt RegistryStack.Outputs.SignedRepositoryUri
+  LambdaRepositoryUri:
+    Description: The URI to use for pushing container images for lambda
+    Value: !GetAtt RegistryStack.Outputs.LambdaRepositoryUri
   SigningProfileArn:
     Description: An ARN referencing the signing profile
     Value: !GetAtt RegistryStack.Outputs.SigningProfileArn
