--- a/pattern/ecs-fargate-container-image-signing-and-verification/files/parent-step-03.yml
+++ b/pattern/ecs-fargate-container-image-signing-and-verification/files/parent-step-03.yml
@@ -1,8 +1,10 @@
 AWSTemplateFormatVersion: "2010-09-09"
 Transform: AWS::Serverless-2016-10-31
-Description: Parent stack that deploys a serverless AWS Fargate web service.
-             Containers for the application will be verified after launch using AWS Signer
+Description: Parent stack that deploys a sample workflow for signing and verifying
+             the signatures on container images at runtime.
 Parameters:
+  LambdaImageUri:
+    Type: String
   SignedImageUri:
     Type: String
 
@@ -20,20 +22,23 @@ Resources:
     Properties:
       Location: sigverify.yml
       Parameters:
-        SigningProfileArn: !GetAtt RegistryStack.Outputs.SigningProfileArn
+        LambdaImageUri: !Ref LambdaImageUri
 
-  # Sample tasks
-  SampleTasks:
+  # Sample task
+  SampleTask:
     Type: AWS::Serverless::Application
     Properties:
-      Location: sample-tasks.yml
+      Location: sample-task.yml
       Parameters:
         SignedImageUri: !Ref SignedImageUri
 
 Outputs:
-  RepositoryUri:
+  SignedRepositoryUri:
     Description: The URI to use for pushing container images to the private registry
-    Value: !GetAtt RegistryStack.Outputs.RepositoryUri
+    Value: !GetAtt RegistryStack.Outputs.SignedRepositoryUri
+  LambdaRepositoryUri:
+    Description: The URI to use for pushing container images for lambda
+    Value: !GetAtt RegistryStack.Outputs.LambdaRepositoryUri
   SigningProfileArn:
     Description: An ARN referencing the signing profile
     Value: !GetAtt RegistryStack.Outputs.SigningProfileArn
