Fix linter error

--- a/pattern/ecs-fargate-container-image-signing-and-verification/files/sample-task.yml
+++ b/pattern/ecs-fargate-container-image-signing-and-verification/files/sample-task.yml
@@ -32,7 +32,7 @@ Resources:
       RequiresCompatibilities:
         - EC2
         - FARGATE
-      ExecutionRoleArn: !Ref TaskExecutionRole
+      ExecutionRoleArn: !GetAtt TaskExecutionRole.Arn
       NetworkMode: awsvpc
       Cpu: 256
       Memory: 512
