--- a/pattern/public-facing-web-ecs-ec2-cloudformation/files/cluster.yml
+++ b/pattern/public-facing-web-ecs-ec2-cloudformation/files/cluster.yml
@@ -187,7 +187,7 @@ Resources:
           Status: ENABLED
           # Percentage of cluster reservation to try to maintain
           TargetCapacity: 100
-        ManagedTerminationProtection: DISABLED
+        ManagedTerminationProtection: ENABLED
 
   # Create a cluster capacity provider assocation so that the cluster
   # will use the capacity provider
