--- a/pattern/ecs-ec2-bottlerocket-cluster/files/cluster.yml
+++ b/pattern/ecs-ec2-bottlerocket-cluster/files/cluster.yml
@@ -64,7 +64,7 @@ Resources:
       MinSize: 0
       MaxSize: !Ref MaxSize
       DesiredCapacity: !Ref DesiredCapacity
-      NewInstancesProtectedFromScaleIn: false
+      NewInstancesProtectedFromScaleIn: true
     UpdatePolicy:
       AutoScalingReplacingUpdate:
         WillReplace: 'true'
