--- a/pattern/jupyter-notebook-inference-container-cloudformation/files/inferentia-cluster.yml
+++ b/pattern/jupyter-notebook-inference-container-cloudformation/files/inferentia-cluster.yml
@@ -62,7 +62,7 @@ Resources:
       MinSize: 0
       MaxSize: !Ref MaxSize
       DesiredCapacity: !Ref DesiredCapacity
-      NewInstancesProtectedFromScaleIn: false
+      NewInstancesProtectedFromScaleIn: true
     UpdatePolicy:
       AutoScalingReplacingUpdate:
         WillReplace: 'true'
