--- a/pattern/worker-ecs-ec2-cloudformation/files/cluster.yml
+++ b/pattern/worker-ecs-ec2-cloudformation/files/cluster.yml
@@ -62,7 +62,7 @@ Resources:
       MinSize: 0
       MaxSize: !Ref MaxSize
       DesiredCapacity: !Ref DesiredCapacity
-      NewInstancesProtectedFromScaleIn: false
+      NewInstancesProtectedFromScaleIn: true
     UpdatePolicy:
       AutoScalingReplacingUpdate:
         WillReplace: 'true'
